--- a/articles/azure-resource-manager/templates/index.yml
+++ b/articles/azure-resource-manager/templates/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: na
   author: mumian
   ms.author: jgao
-  ms.date: 11/06/2020
-  ms.openlocfilehash: 5eb48265241bb6db312ef952e2e0cc5f0519022a
-  ms.sourcegitcommit: c27a20b278f2ac758447418ea4c8c61e27927d6a
+  ms.date: 03/03/2021
+  ms.openlocfilehash: 77a0d579710a0e7f2de8928d6561e55ea5691f69
+  ms.sourcegitcommit: f3ec73fb5f8de72fe483995bd4bbad9b74a9cc9f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/03/2021
-  ms.locfileid: "101741091"
+  ms.lasthandoff: 03/04/2021
+  ms.locfileid: "102036161"
 landingContent:
 - title: ARM テンプレートについて
   linkLists:
@@ -25,6 +25,8 @@ landingContent:
     links:
     - text: テンプレートとは
       url: overview.md
+    - text: Bicep とは
+      url: bicep-overview.md
   - linkListType: concept
     links:
     - text: ベスト プラクティス
@@ -50,13 +52,15 @@ landingContent:
     - text: JSON テンプレートを作成する - VS Code
       url: quickstart-create-templates-use-visual-studio-code.md
     - text: Bicep テンプレートを作成する - VS Code
-      url: quickstart-create-bicep-templates-use-visual-studio-code.md
+      url: quickstart-create-bicep-use-visual-studio-code.md
     - text: テンプレート スペックの作成とデプロイ
       url: quickstart-create-template-specs.md
   - linkListType: tutorial
     links:
-    - text: 初心者向けチュートリアル
+    - text: 初級者向けテンプレートのチュートリアル
       url: template-tutorial-create-first-template.md
+    - text: 初級者向け Bicep のチュートリアル
+      url: bicep-tutorial-create-first-bicep.md
   - linkListType: learn
     links:
     - text: Resource Manager テンプレートを使用してデプロイする
