--- a/articles/azure-arc/kubernetes/index.yml
+++ b/articles/azure-arc/kubernetes/index.yml
@@ -9,14 +9,14 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/02/2021
   ms.author: shasb
-  ms.openlocfilehash: f97b1560e062d1849f726baff8cd66d8e75f8b7f
-  ms.sourcegitcommit: b4647f06c0953435af3cb24baaf6d15a5a761a9c
+  ms.openlocfilehash: e9acbb8206985fbc9edebba8d4183ca1a97736f7
+  ms.sourcegitcommit: dac05f662ac353c1c7c5294399fca2a99b4f89c8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/02/2021
-  ms.locfileid: "101647848"
+  ms.lasthandoff: 03/04/2021
+  ms.locfileid: "102121662"
 landingContent:
-- title: Azure Arc を使用して Kubernetes クラスターを Azure に接続する
+- title: Azure Arc 対応 Kubernetes について
   linkLists:
   - linkListType: overview
     links:
@@ -30,6 +30,8 @@ landingContent:
       url: conceptual-agent-architecture.md
     - text: 構成と GitOps
       url: conceptual-configurations.md
+    - text: GitOps を使用した CI/CD ワークフロー
+      url: conceptual-gitops-ci-cd.md
     - text: よく寄せられる質問
       url: faq.md
 - title: 作業開始
@@ -44,6 +46,8 @@ landingContent:
     links:
     - text: GitOps を使用して構成をデプロイする
       url: tutorial-use-gitops-connected-cluster.md
+    - text: GitOps を使用して CI/CD を実装する
+      url: tutorial-gitops-ci-cd.md
 - title: クラスタの構成、管理、監視
   linkLists:
   - linkListType: how-to-guide
