--- a/articles/defender-for-iot/TOC.yml
+++ b/articles/defender-for-iot/TOC.yml
@@ -27,12 +27,12 @@
         - name: Defender for IoT エージェントベースのソリューションにオンボードする
           displayName: 'IoT Hub, existing, enable'
           href: quickstart-onboard-iot-hub.md
-        - name: Defender for IoT マイクロ エージェントをインストールする (プレビュー)
+        - name: Defender for IoT マイクロ エージェントをインストールする
           displayName: 'package, authentication, methods, certificate, authenticate, version'
           href: quickstart-standalone-agent-binary-installation.md
-        - name: Defender for IoT マイクロ エージェントのモジュール ツインを作成する (プレビュー)
+        - name: Defender for IoT マイクロ エージェントのモジュール ツインを作成する
           href: quickstart-create-micro-agent-module-twin.md
-        - name: ソース コードから Defender for IoT マイクロ エージェントを構築する (プレビュー)
+        - name: ソース コードから Defender for IoT マイクロ エージェントを構築する
           displayName: 'baseline, configuration, customize, distribution'
           href: quickstart-building-the-defender-micro-agent-from-source.md
         - name: Azure RTOS 用のセキュリティ モジュールを構成する
@@ -56,18 +56,18 @@
           href: concept-key-concepts.md
     - name: デバイス ビルダー向けのエージェントベースのソリューション
       items:
-        - name: エージェント ポートフォリオの概要と OS サポート (プレビュー)
+        - name: エージェント ポートフォリオの概要と OS サポート
           displayName: 'standalone agent, micro agent, RTOS'
           href: concept-agent-portfolio-overview-os-support.md
-        - name: スタンドアロンのマイクロ エージェントの概要 (プレビュー)
+        - name: スタンドアロンのマイクロ エージェントの概要
           displayName: 'endpoint, posture, distribution, flexible, model'
           href: concept-standalone-micro-agent-overview.md
-        - name: セキュリティ エージェントの認証 (プレビュー)
+        - name: セキュリティ エージェントの認証
           displayName: 'connection string, certificate, authentication'
           href: concept-security-agent-authentication.md
         - name: セキュリティ体制 - CIS ベンチマーク
           href: concept-security-posture.md
-        - name: イベントの集計 (プレビュー)
+        - name: イベントの集計
           displayName: 'process events, network connection'
           href: concept-event-aggregation.md
         - name: IoT Hub 用の組み込みアラート
@@ -249,9 +249,6 @@
           displayName: 'data, collection, geolocation, log analytics, raw events'
           href: how-to-configure-agent-based-solution.md
         - name: CIS ベンチマークの推奨事項を調査する
-          displayName: 'investigation, queries, investigate'
-          href: how-to-configure-agent-based-solution.md
-        - name: CIS ベンチマークの推奨事項を調査する
           href: how-to-investigate-cis-benchmark.md
         - name: カスタム アラートの作成
           displayName: security group
@@ -300,7 +297,7 @@
               href: how-to-investigate-device.md
 - name: トラブルシューティング
   items:
-    - name: Defender for IoT マイクロ エージェントのトラブルシューティング (プレビュー)
+    - name: Defender for IoT マイクロ エージェントのトラブルシューティング
       displayName: 'service status, review logs'
       href: troubleshoot-defender-micro-agent.md
 - name: 機能のサポートと廃止
