--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -262,8 +262,8 @@
           href: control-kubeconfig-access.md
         - name: ネットワーク ポリシーによるポッドのトラフィックのセキュリティ保護
           href: use-network-policies.md
-        - name: Azure Policy を使用したポッドのセキュリティ保護
-          href: use-pod-security-on-azure-policy.md
+        - name: Azure Policy を使用する
+          href: use-azure-policy.md
         - name: ポッド セキュリティ ポリシーの使用 (プレビュー)
           href: use-pod-security-policies.md
         - name: API サーバーの許可された IP 範囲の定義
