--- a/articles/attestation/toc.yml
+++ b/articles/attestation/toc.yml
@@ -56,7 +56,7 @@
     - name: Azure PowerShell
       href: /powershell/module/az.attestation/?view=azps-5.0.0#attestation
     - name: Azure CLI
-      href: /cli/azure/ext/attestation/attestation?view=azure-cli-latest
+      href: /cli/azure/ext/attestation/attestation
     - name: Windows 向け Azure DCAP ライブラリ
       href: 'https://www.nuget.org/packages/Microsoft.Azure.DCAP/'
     - name: Linux 向け Azure DCAP ライブラリ
