--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -173,7 +173,7 @@
       href: concepts-pipeline-execution-triggers.md
     - name: 統合ランタイム
       href: concepts-integration-runtime.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -592,7 +592,7 @@
           href: control-flow-system-variables.md
         - name: マッピング データ フローをパラメーター化する
           href: parameters-data-flow.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: データ移動のセキュリティに関する考慮事項
           href: data-movement-security-considerations.md
@@ -704,6 +704,8 @@
           href: how-to-create-tumbling-window-trigger.md
         - name: タンブリング ウィンドウ トリガーの依存関係の作成
           href: tumbling-window-trigger-dependency.md
+        - name: パイプラインでのトリガー メタデータの参照
+          href: how-to-use-trigger-parameterization.md
     - name: Data Catalog とガバナンス
       items:
         - name: Data Factory を Azure Purview に接続する
