--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -34,7 +34,13 @@
       href: application-proxy-add-on-premises-application.md
 - name: サンプル
   items:
-    - name: アプリケーション プロキシの Azure PowerShell サンプル
+    - name: アプリ管理の PowerShell サンプル
+      items:
+        - name: アプリ管理サンプルの概要
+          href: app-management-powershell-samples.md
+        - name: すべてのアプリの登録、シークレット、および証明書をエクスポートする
+          href: ./scripts/powershell-export-all-app-registrations-secrets-and-certs.md
+    - name: アプリ プロキシの PowerShell サンプル
       href: application-proxy-powershell-samples.md
 - name: 概念
   expanded: true
