commit translated contents

--- a/articles/cognitive-services/Bing-Web-Search/index.yml
+++ b/articles/cognitive-services/Bing-Web-Search/index.yml
@@ -14,12 +14,12 @@ metadata:
   author: aahill
   ms.author: aahi
   ms.date: 11/06/2019
-  ms.openlocfilehash: 22d0418103315fe2649762a603f0d4929b56f43f
-  ms.sourcegitcommit: 8a1ba1ebc76635b643b6634cc64e137f74a1e4da
+  ms.openlocfilehash: 5a158da6465c8f881febbf01019a1f10362b3ac4
+  ms.sourcegitcommit: 24a12d4692c4a4c97f6e31a5fbda971695c4cd68
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/09/2020
-  ms.locfileid: "94380659"
+  ms.lasthandoff: 03/05/2021
+  ms.locfileid: "102183473"
 highlightedContent:
   items:
   - title: Bing Search API を比較する
@@ -367,4 +367,4 @@ additionalContent:
       - text: Azure PowerShell
         url: /powershell/module/azurerm.cognitiveservices/?view=azurermps-4.4.1#cognitive_services
       - text: Azure CLI
-        url: /cli/azure/cognitiveservices?view=azure-cli-latest#az-cognitiveservices-list
+        url: /cli/azure/cognitiveservices#az-cognitiveservices-list
