--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -588,6 +588,8 @@
               href: ./spark/apache-spark-manage-scala-packages.md
             - name: Python パッケージのインストール エラーのトラブルシューティング
               href: ./spark/apache-spark-troubleshoot-library-errors.md
+            - name: Conda プライベート チャネルを作成する
+              href: ./spark/apache-spark-custom-conda-channel.md
         - name: ノートブックと IDE ツールを使用する
           items:
             - name: Notebooks を管理する
