--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -101,9 +101,14 @@
           href: tutorial-register-applications.md
         - name: シングルページ アプリケーション (SPA) を登録する
           href: tutorial-register-spa.md
-        - name: SAML サービス プロバイダーを登録する
-          href: connect-with-saml-service-providers.md
-          displayName: 'SP, RP, service provider, connect'
+        - name: SAML アプリケーション
+          items:
+            - name: SAML アプリケーションを構成する
+              href: saml-service-provider.md
+              displayName: 'SP, service provider'
+            - name: SAML アプリケーションのオプションを構成する
+              href: saml-service-provider-options.md
+              displayName: 'SP, service provider'
         - name: Microsoft Graph アプリケーションを登録する
           href: microsoft-graph-get-started.md
           displayName: 'migrate, migration, microsoft graph'
@@ -160,8 +165,14 @@
           href: identity-provider-azure-ad-b2c.md
         - name: Facebook
           href: identity-provider-facebook.md
-        - name: 汎用の ID プロバイダー
+        - name: 汎用 OpenId Connect
           href: identity-provider-generic-openid-connect.md
+        - name: 汎用 SAML ID プロバイダー
+          items:
+            - name: SAML ID プロバイダーを構成する
+              href: identity-provider-generic-saml.md
+            - name: SAML ID プロバイダーのオプションを構成する
+              href: identity-provider-generic-saml-options.md
         - name: GitHub
           href: identity-provider-github.md
         - name: Google
